# django-models

./: README.md  pyproject.toml
snack_tracker_project/: db.sqlite3
snack_tracker_project/snack_tracker_project/: settings.py  urls.py
snack_tracker_project/snacks/: admin.py  models.py  tests.py  urls.py  views.py
snack_tracker_project/snacks/migrations/: 0001_initial.py  0002_snack_rating.py
snack_tracker_project/templates/: _base.html  snack_detail.html  snack_list.html
